[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/UI/ThemeMAIN.tres" type="Theme" id=1]
[ext_resource path="res://Resources/UI/PopUps/Scripts/ScenariosPopUp.gd" type="Script" id=2]
[ext_resource path="res://Resources/UI/Scenarios/TheBasics.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/UI/Scenarios/TheFirstLaw.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/UI/Scenarios/GenotypeFenotype.tscn" type="PackedScene" id=6]
[ext_resource path="res://Resources/UI/Scenarios/Allels.tscn" type="PackedScene" id=7]

[node name="ScenariosPopUp" type="WindowDialog"]
visible = true
margin_right = 760.0
margin_bottom = 296.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 640.0

[node name="Panel" type="Panel" parent="MainMenu"]
margin_right = 760.0
margin_bottom = 304.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scenario1" type="Button" parent="MainMenu" groups=["Scenario"]]
margin_left = 24.0
margin_top = 48.0
margin_right = 144.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="MainMenu/Scenario1"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 88.0
text = "The Basics"
align = 1
autowrap = true

[node name="Scenario2" type="Button" parent="MainMenu" groups=["Scenario"]]
margin_left = 176.0
margin_top = 48.0
margin_right = 296.0
margin_bottom = 152.0
disabled = true

[node name="Label" type="Label" parent="MainMenu/Scenario2"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 106.0
text = "Allels"
align = 1
autowrap = true

[node name="Scenario3" type="Button" parent="MainMenu" groups=["Scenario"]]
margin_left = 328.0
margin_top = 48.0
margin_right = 448.0
margin_bottom = 152.0
disabled = true

[node name="Label" type="Label" parent="MainMenu/Scenario3"]
margin_top = 16.0
margin_right = 120.0
margin_bottom = 106.0
text = "Genotype and Fenotype"
align = 1
autowrap = true

[node name="Scenario4" type="Button" parent="MainMenu" groups=["Scenario"]]
margin_left = 480.0
margin_top = 48.0
margin_right = 600.0
margin_bottom = 152.0
disabled = true

[node name="Label" type="Label" parent="MainMenu/Scenario4"]
margin_top = 16.0
margin_right = 120.0
margin_bottom = 90.0
text = "The Law of Equal Segreagtion"
align = 1
autowrap = true

[node name="Scenario5" type="Button" parent="MainMenu" groups=["Scenario"]]
margin_left = 616.0
margin_top = 48.0
margin_right = 736.0
margin_bottom = 152.0
disabled = true

[node name="Label" type="Label" parent="MainMenu/Scenario5"]
margin_top = 8.0
margin_right = 120.0
margin_bottom = 105.0
text = "The Law of Independent Assortment"
align = 1
autowrap = true

[node name="Scenario6" type="Button" parent="MainMenu" groups=["Scenario"]]
margin_left = 24.0
margin_top = 176.0
margin_right = 144.0
margin_bottom = 280.0
disabled = true

[node name="Label" type="Label" parent="MainMenu/Scenario6"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 88.0
text = "Exercise 1"
align = 1
autowrap = true

[node name="Scenario7" type="Button" parent="MainMenu" groups=["Scenario"]]
margin_left = 176.0
margin_top = 176.0
margin_right = 296.0
margin_bottom = 280.0
disabled = true

[node name="Label" type="Label" parent="MainMenu/Scenario7"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 106.0
text = "Exercise 2"
align = 1
autowrap = true

[node name="Scenario8" type="Button" parent="MainMenu" groups=["Scenario"]]
margin_left = 328.0
margin_top = 176.0
margin_right = 448.0
margin_bottom = 280.0
disabled = true

[node name="Label" type="Label" parent="MainMenu/Scenario8"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 88.0
text = "Exercise 3"
align = 1
autowrap = true

[node name="Scenario9" type="Button" parent="MainMenu" groups=["Scenario"]]
margin_left = 480.0
margin_top = 176.0
margin_right = 600.0
margin_bottom = 280.0
disabled = true

[node name="Label" type="Label" parent="MainMenu/Scenario9"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 105.0
text = "Exercise 4"
align = 1
autowrap = true

[node name="Scenario10" type="Button" parent="MainMenu" groups=["Scenario"]]
margin_left = 616.0
margin_top = 176.0
margin_right = 736.0
margin_bottom = 280.0
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainMenu/Scenario10"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 88.0
text = "Exercise 5"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainMenu"]
margin_left = 8.0
margin_top = 8.0
margin_right = 200.0
margin_bottom = 56.0
text = "Scenarios"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TheBasics" parent="." instance=ExtResource( 3 )]
visible = false

[node name="TheFirstLaw" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Allels" parent="." instance=ExtResource( 7 )]
visible = false

[node name="GenotypeFenotype" parent="." instance=ExtResource( 6 )]
visible = false

[node name="TheSecondLaw" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Exercise1" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exercise2" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exercise3" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exercise4" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exercise5" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MainMenu/Scenario1" to="." method="_on_Scenario1_pressed"]
[connection signal="pressed" from="MainMenu/Scenario2" to="." method="_on_Scenario2_pressed"]
[connection signal="pressed" from="MainMenu/Scenario3" to="." method="_on_Scenario3_pressed"]
